infrastructure/kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: viratec-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - viratec.knu.ua
      secretName: viratec-tls
  rules:
    - host: viratec.knu.ua
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: viratec-backend-service
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: viratec-frontend-service
                port:
                  number: 80
